Disable all UI tests
TestFX just does not work in headless mode on Java 10